fix css overlap issue.  Not related to mail, but I did it on this branch anyway.

--- a/assets/css/car-list.css
+++ b/assets/css/car-list.css
@@ -97,9 +97,6 @@ label{
     select{
         max-width:65%;
     }
-    form#car-search-form {
-        height:4em;
-    }
     .add-review {
         float: unset;
         margin-left: 0px;
